--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
             </a>
                  
             <form>
-                <input name="name" placeholder="Name" type="text" required /><br/>
-                <input name="email" placeholder="Email" type="email" required /><br/>
-                <textarea name="message" placeholder="Message" required ></textarea>
-                <input type="submit" value="SEND" class="submit" />
+                <input id="nama" name="name" placeholder="Name" type="text" required /><br/>
+                <input id="email" name="email" placeholder="Email" type="email" required /><br/>
+                <textarea id="pesan" name="message" placeholder="Message" required ></textarea>
+                <input type="submit" value="SEND" id="submit" />
             </form>
         </div>
         <!-- Form section end -->
@@ -134,6 +134,6 @@
         <div class="copyright">
             &copy; 2021 My Blog. All rights reserved.
         </div>
-        
+        <script src="index.js"></script>
     </body>
 </html>
